# Harmonisation

./: .gitattributes  .gitignore  AUTHORS.md  README.md  THANKS.md
harmonisation_eiv/: README.md  setup.py
harmonisation_eiv/data/simulated_matchup/: 0_1.nc  1_2.nc  atrue.txt
harmonisation_eiv/data/simulated_matchup_result/: harm_EV_5.0_REV_602_00_AVHRR_SIM0_03__________res_0_1.nc  harm_EV_5.0_REV_602_00_AVHRR_SIM0_03__________res_2_3.nc
harmonisation_eiv/harmonisation/: __init__.py  version.py
harmonisation_eiv/harmonisation/sensor_data/: SensorDataFactory.py
harmonisation_eiv/harmonisation/sensor_data/AVHRR/: AVHRR_11um_3_sensor_data.py  AVHRR_12um_4_rescaled_sensor_data.py  AVHRR_sensor_models.py  AVHRR_sensor_models_cython.pyx
harmonisation_eiv/harmonisation/sensor_data/HIRS/: HIRS__Ch01_3_sensor_data.py  (+1 more)
harmonisation_eiv/harmonisation/tools/: HarmonisationCompPlottingOp.py  HarmonisationOp.py  fullEIVsolver_covariance_analytical.py  fullEIVsolver_covariance_montecarlo.py  initialGNsolver.py  matchup_plotting.py
harmonisation_eiv/lsf/: fullEIVsolverLSF.sh
harmonisation_meiv_demo/: .gitignore  AUTHORS.md  CMakeLists.txt  README.md  THANKS.md
harmonisation_meiv_demo/src/main/cmake/: fortran.cmake  netcdf_required.cmake  openmp_optional.cmake  project.cmake  unix.cmake
harmonisation_meiv_demo/src/main/fortran-filtered/gpl/: mod_info.F90
harmonisation_meiv_demo/src/main/fortran/gpl/: demo.F90  mod_assert.F90  mod_base.F90  mod_config.F90  mod_error_handler.F90  mod_logger.F90  mod_matchup.F90  mod_matrices.F90  mod_nc.F90  mod_reader.F90  mod_sensors.F90  mod_time.F90  mod_type.F90  mod_writer.F90
harmonisation_meiv_demo/src/main/resources-filtered/jobs/: job_ph____v1_EIV_101_01.nml  job_ph____v1_EIV_111_01.nml  job_ph____v1_ODR_101_01.nml  job_ph____v1_ODR_111_01.nml
harmonisation_meiv_demo/src/main/resources-filtered/templates/: template_job.nml  template_run.nml
harmonisation_meiv_demo/src/test/resources/: run.nml
harmonisation_meiv_demo/src/test/resources/ph_v1/: 0_1.nc  1_2.nc  2_3.nc  NOTICE.md
src/main/: harmonisation_input_checker.py
src/main/cdl/: README.md  harm_FO_residuals_dataset.cdl
src/main/full_eiv_solver/: README.md
src/main/harmonisation/: README.md  setup.py
src/main/mathematica/: HarmonisationPlots.wl  HarmonisationPlots_template.nb  MeasurementEquations.nb  README.md  template.nb
src/main/tools/: AVHRR_to_updated_spec.py  MW_add_W_matrices.py  W_matrix_functions.py  generate_w_matrices.py  harmonisation_input_checker.py  pmh2fiduceo.py  simulated_AVHRR.py  simulation_set_true_K.py
src/main/workshop/: README.md  harmonisation_interactive_lecture.ipynb  harmonisation_interactive_lecture_complete.html
tools/: MW_add_W_matrices.py  convert_bt_to_radiance.py  generate_w_matrices.py  harmonisation_input_checker.py  simulated_AVHRR.py  simulation_set_true_K.py
tools/tests/: test_AVHRR_to_updated_spec.py  test_generate_w_matrices.py
training/workshop_2018/: README.md  harmonisation_interactive_lecture.ipynb
training/workshop_2019/: README.md  Uncertainty_Functions.py  avhrr_sample_easyFCDR.nc  fcdr_interactive_lecture.ipynb  fcdr_interactive_lecture_complete.html  harmonisation_interactive_lecture.ipynb  harmonisation_interactive_lecture_complete.html  plotting_functions.py  regridding_interactive_lecture.ipynb  regridding_interactive_lecture_complete.html
(+507 files in other folders)
